fix: spacing of login_area at Header component

--- a/src/app/shared/components/button/button.component.css
+++ b/src/app/shared/components/button/button.component.css
@@ -9,5 +9,4 @@
     background: #007298;
     border-radius: 4px;
     text-transform: uppercase;
-    margin: 0 0 0 16px;
 }
