--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -20,7 +20,9 @@
 }
 
 .app-header__login-area {
+    align-items: center;
     display: flex;
+    gap: 100px;
 }
 
 .app-header__login-area__username {
